--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -1,280 +1,43 @@
-@charset "UTF-8";
-.clearfix {
-  clear: both; }
+/*
+Error: Invalid CSS after "...ings/_settings"": expected "{", was ";"
+        on line 1 of css/sass/style.scss
 
-.fixed {
-  position: fixed;
-  z-index: 1000; }
+1: import "settings/_settings";
+2: 
+3: @import "partials/_allMixins";
+4: @import "partials/_classes";
+5: 
+6: @import "layouts/_layout";
 
-.fullwidth {
-  width: 100%; }
-
-.screan-reader-text {
-  position: absolute;
-  height: 0;
-  width: 0;
-  opacity: 0;
-  font-size: 0; }
-
-.hidden {
-  display: none; }
-
-.top0 {
-  top: 0; }
-
-#enjoy-mondays #main-header .left-content {
-  position: relative;
-  left: 220px; }
-  @media (max-width: 767px) {
-    #enjoy-mondays #main-header .left-content {
-      left: 0; } }
-@media (max-width: 480px) {
-  #enjoy-mondays #main-header li {
-    margin-left: 20px; } }
-#enjoy-mondays #main-header .right-content {
-  float: right;
-  height: 20px; }
-  @media (max-width: 900px) {
-    #enjoy-mondays #main-header .right-content {
-      width: 168px;
-      height: 50px;
-      top: 3px; } }
-  @media (max-width: 650px) {
-    #enjoy-mondays #main-header .right-content {
-      display: none; } }
-@media (max-width: 650px) {
-  #enjoy-mondays #main-header {
-    padding-left: 0;
-    padding-right: 0; }
-    #enjoy-mondays #main-header .left-content {
-      float: none; }
-      #enjoy-mondays #main-header .left-content h1 {
-        margin-left: 30px;
-        float: left; }
-      #enjoy-mondays #main-header .left-content ul {
-        float: right;
-        margin-right: 30px; }
-        #enjoy-mondays #main-header .left-content ul li {
-          float: left; }
-          #enjoy-mondays #main-header .left-content ul li:last-child a {
-            padding-right: 0; } }
-@media (max-width: 350px) {
-  #enjoy-mondays #main-header {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    height: 50px; }
-    #enjoy-mondays #main-header .left-content h1 {
-      float: none;
-      margin: 10px auto 12px auto; }
-    #enjoy-mondays #main-header .left-content ul {
-      float: none;
-      display: inline-block; } }
-
-#enjoy-mondays #fix-placeholder {
-  height: 51px; }
-  @media (max-width: 350px) {
-    #enjoy-mondays #fix-placeholder {
-      height: 81px; } }
-
-@media (max-width: 767px) {
-  #enjoy-mondays .content {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%; } }
-#enjoy-mondays .content hr {
-  border: 0;
-  height: 3px;
-  width: 18%;
-  margin: 0 auto 3%;
-  clear: both; }
-
-#enjoy-mondays #logo {
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
-  width: 28px;
-  height: auto; }
-  #enjoy-mondays #logo img {
-    width: 100%; }
-
-@media (min-width: 1180px) {
-  #enjoy-mondays .content {
-    width: 100%;
-    padding-top: 0;
-    padding-bottom: 0; }
-    #enjoy-mondays .content h1, #enjoy-mondays .content h2, #enjoy-mondays .content h3, #enjoy-mondays .content h4, #enjoy-mondays .content h5, #enjoy-mondays .content h6 {
-      width: 550px;
-      margin: 0;
-      padding-left: 40px;
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content h1:first-child {
-      padding-top: 30px; }
-    #enjoy-mondays .content ul, #enjoy-mondays .content ol {
-      margin-left: 0;
-      padding-left: 60px !important;
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content p {
-      position: relative;
-      z-index: 2; }
-    #enjoy-mondays .content pre {
-      width: calc(100% - 550px); }
-    #enjoy-mondays .content > *:last-child {
-      padding-bottom: 40px; } }
-#enjoy-mondays {
-  background-color: #E9E8E3; }
-  #enjoy-mondays #main-header,
-  #enjoy-mondays .content-root,
-  #enjoy-mondays .menubar,
-  #enjoy-mondays .content,
-  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    background-color: #E9E8E3; }
-  @media (min-width: 1180px) {
-    #enjoy-mondays .content,
-    #enjoy-mondays .content-root {
-      background-color: #2b2922;
-      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(188, 185, 169, 0)));
-      background: -webkit-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
-      background: -moz-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
-      background: -o-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
-      background: -ms-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
-      background: linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%); } }
-  #enjoy-mondays.big-h3 {
-    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #E9E8E3), color-stop(1, rgba(188, 185, 169, 0)));
-    background: -webkit-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
-    background: -moz-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
-    background: -o-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
-    background: -ms-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
-    background: linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%); }
-  #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
-    background-color: #E9E8E3; }
-  #enjoy-mondays .content code {
-    background-color: #2b2922; }
-  #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-    background-color: #2b2922;
-    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(233, 232, 226, 0)));
-    background: -webkit-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
-    background: -moz-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
-    background: -o-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
-    background: -ms-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
-    background: linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%); }
-    @media (max-width: 1180px) {
-      #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-        background-color: #2b2922; } }
-
-#enjoy-mondays {
-  color: #2b2922; }
-  #enjoy-mondays a {
-    color: #70758f;
-    line-height: 17px;
-    margin-top: 3px;
-    margin-bottom: -3px; }
-    #enjoy-mondays a:hover, #enjoy-mondays a.active {
-      border-bottom: 3px solid #f50a31; }
-      #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
-        background: none; }
-  #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
-    color: #93061e !important;
-    margin-left: -3px;
-    border-bottom: none !important;
-    border-left: 3px solid #f50a31; }
-  #enjoy-mondays .menu .level-2 > a {
-    padding-left: 3px; }
-  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    color: black; }
-  #enjoy-mondays .content p > code, #enjoy-mondays .content li > code {
-    color: white; }
-  #enjoy-mondays .content em {
-    color: black; }
-
-#enjoy-mondays.big-h3 {
-  -webkit-box-shadow: 0 1px 0 rgba(147, 6, 30, 0.4);
-  box-shadow: 0 1px 0 rgba(147, 6, 30, 0.4); }
-#enjoy-mondays #main-header {
-  text-shadow: 0 1px 0 #dddcd4;
-  border-bottom: solid 1px #bcb9a9; }
-  #enjoy-mondays #main-header li {
-    border-left: 1px solid #f96c84;
-    border-right: 1px solid #bcb9a9; }
-  #enjoy-mondays #main-header h1 + ul {
-    border-left: 1px solid #f96c84; }
-#enjoy-mondays .menubar {
-  border-right: solid 1px #bcb9a9; }
-#enjoy-mondays .content h1:before, #enjoy-mondays .content h2:before, #enjoy-mondays .content h3
-.big-heading:before {
-  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #93061e), color-stop(1, rgba(188, 185, 169, 0)));
-  background: -webkit-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
-  background: -moz-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
-  background: -o-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
-  background: -ms-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
-  background: linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%); }
-#enjoy-mondays .content h4 {
-  border-bottom: solid 1px rgba(188, 185, 169, 0.07); }
-
-#enjoy-mondays {
-  font-family: "Lato", sans-serif;
-  font-weight: 100; }
-  #enjoy-mondays a {
-    font-size: 1em;
-    font-weight: 900; }
-  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    font-family: "Dosis", sans-serif !important;
-    font-weight: 600 !important; }
-  #enjoy-mondays h1 {
-    font-size: 2.5em;
-    text-transform: uppercase; }
-  #enjoy-mondays .content p {
-    font-size: 1.25em; }
-    #enjoy-mondays .content p > code {
-      font-family: ‘Courier, New’, Courier, monospace; }
-  #enjoy-mondays .content pre {
-    font-size: 1.15em; }
-
-#color-swapper {
-  display: none; }
-
-@media (min-width: 767px) {
-  #color-swapper {
-    display: initial;
-    left: 0;
-    padding: 5px; }
-    #color-swapper tr {
-      height: 15px;
-      overflow: hidden; }
-      #color-swapper tr:hover {
-        height: 12px;
-        cursor: pointer; }
-    #color-swapper td {
-      font-size: 0;
-      line-height: 0;
-      width: 27px;
-      border-right: 1px solid white; }
-      #color-swapper td a {
-        width: 27px;
-        height: 12px;
-        display: block; }
-
-  #color-swapper td.GRAY {
-    background-color: #4a4a4a; }
-  #color-swapper td.LIGHT_GRAY {
-    background-color: #E9E8E3; }
-  #color-swapper td.DARK_GRAY {
-    background-color: #3A3A3A; }
-  #color-swapper td.DARK_BLUE {
-    background-color: #363B48; }
-  #color-swapper td.FUXSIA {
-    background-color: #DF3F54; }
-  #color-swapper td.LIGHT_FUXSIA {
-    background-color: #F17C71; }
-  #color-swapper td.ZENBURN_BG {
-    background-color: #3F3F3F; }
-  #color-swapper td.LIGHT_WHITE {
-    background-color: #F3F6FB; }
-  #color-swapper td.LIGHTER_WHITE {
-    background-color: #F8F8F4; } }
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+css/sass/style.scss:1
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:1165:in `expected'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:1101:in `expected'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:1096:in `tok!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:641:in `block'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:635:in `ruleset'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:660:in `block_child'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:650:in `block_contents'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:117:in `stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:42:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:393:in `_to_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"...ings/_settings\"\": expected \"{\", was \";\"\A         on line 1 of css/sass/style.scss\A \A 1: import \"settings/_settings\";\A 2: \A 3: @import \"partials/_allMixins\";\A 4: @import \"partials/_classes\";\A 5: \A 6: @import \"layouts/_layout\";"; }
